# cordic

./: LICENSE  README.md  cordic.cabal  stack.yaml
app/: Main.hs
src/: CORDIC.hs  Util.hs
